# orthodox

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  all.sh  asan.sh  build.sh  clang-format.sh  clang-tidy.sh  clang.sh  common.sh  coverage.sh  cpp-check.sh  cpp-lint.sh  gcc.sh  include-what-you-use.sh  iwyu.sh  scan-build.sh  tsan.sh  valgrind.sh
include/template/: template.h
src/: main.cpp  template.cpp
test/: LibTest.cpp
